<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Undo -->
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/action_undo"
        android:enabled="false"
        app:showAsAction="always" />

    <!-- Redo -->
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/action_redo"
        android:enabled="false"
        app:showAsAction="always" />

    <!-- Background Color -->
    <item
        android:id="@+id/action_background_color"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="Background Color"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <!-- Pin toggle -->
    <item
        android:id="@+id/action_pin"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/action_pin"
        app:showAsAction="ifRoom" />

    <!-- Save action -->
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <!-- Export to PDF action in overflow menu -->
    <item
        android:id="@+id/action_export_pdf"
        android:title="Export to PDF"
        app:showAsAction="never" />

    <!-- Discard action in overflow menu -->
    <item
        android:id="@+id/action_discard"
        android:title="@string/action_discard"
        app:showAsAction="never" />
</menu>

